--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "firebase-tools": "^9.5.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.34.2",
     "rollup-plugin-svelte": "^6.1.1",
